--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 	 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
+	
+
+
+
 	<link rel="shortcut icon" href="./assets/img/favicon.ico">
 	
 		<meta name="description" content="В Спектролайн усе просто: уважно слухаємо, пропонуємо рішення, дотримуємось термінів і робимо свою роботу так, щоб хотілось рекомендувати нас друзям.">
-	<title>Спектролайн</title>  <script type="module" crossorigin src="./js/index.min.js?v=1763485289772"></script>
-  <link rel="modulepreload" crossorigin href="./js/common.min.js?v=1763485289772">
-  <link rel="stylesheet" crossorigin href="./css/index.min.css?v=1763485289772">
-</head>
+	<title>Спектролайн</title>
+  <script type="module" crossorigin src="./js/index.min.js?v=1763487580878"></script>
+  <link rel="modulepreload" crossorigin href="./js/common.min.js?v=1763487580878">
+  <link rel="stylesheet" crossorigin href="./css/index.min.css?v=1763487580878">
+</head>
+
+
 	<body>
 		<div class="wrapper">
 			
@@ -73,7 +79,8 @@
 </header>
 
 	
-			
+			
+
 
 <main class="page page--index">
    <div data-fls-preload="" id="preloader" class="page__preloader preloader">
@@ -831,7 +838,9 @@
 		</div>
 	</div>
 </div>
-	
+	
+
 	</body>
 </html>
+
 
